--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página Netuno</title>
-    <link rel="stylesheet" href="estilos/style.css" />
-    <link rel="stylesheet" href="pasta.netuno/Assets_Netuno/icones/mail.png" />
+    <link rel="stylesheet" href="estilos/gerandodiamantes.css" />
   </head>
   <body>
     <header>
@@ -57,9 +56,77 @@
               <br />
             </form>
           </div>
-          <i class="pasta.netuno/Assets_Netuno/icones/mail.png"></i>
-          <div class="form" id="cursuser"></div>
-          <div class="form" id="botform"></div>
+          <div class="form" id="cursuser">
+            <h4>Conhecimento de Programação</h4>
+            <form action="">
+              <input class="form2" type="checkbox" name="check1" id="icheck1" />
+              <label for="ichek1">HTML</label>
+              <input class="form2" type="checkbox" name="check2" id="icheck2" />
+              <label for="icheck2">CSS</label>
+              <input class="form2" type="checkbox" name="check3" id="icheck3" />
+              <label for="icheck3">JavaScript</label>
+              <input class="form2" type="checkbox" name="check4" id="icheck4" />
+              <label for="icheck4">PHP</label> <br />
+              <input class="form2" type="checkbox" name="check5" id="icheck5" />
+              <label for="icheck5">.NET</label>
+              <input class="form2" type="checkbox" name="check6" id="icheck6" />
+              <label for="icheck6">Vue.Js</label>
+              <input class="form2" type="checkbox" name="check7" id="icheck7" />
+              <label for="icheck7">ReactJS</label>
+              <input class="form2" type="checkbox" name="check8" id="icheck8" />
+              <label for="icheck8">React Native</label> <br />
+              <input class="form2" type="checkbox" name="check9" id="icheck9" />
+              <label for="icheck9">Node</label>
+              <input
+                class="form2"
+                type="checkbox"
+                name="check10"
+                id="icheck10"
+              />
+              <label for="icheck10">Python</label>
+              <input
+                class="form2"
+                type="checkbox"
+                name="check11"
+                id="icheck11"
+              />
+              <label for="icheck11">Flutter</label>
+              <input
+                class="form2"
+                type="checkbox"
+                name="check12"
+                id="icheck12"
+              />
+              <label for="icheck12">Outras</label>
+            </form>
+          </div>
+          <div class="form" id="botform">
+            <h4>Já trabalhou com desenolvimento?</h4>
+            <form action="">
+              <input
+                class="checkbot"
+                type="radio"
+                name="checkbot"
+                id="icheckbot1"
+              />
+              <label class="label_checkbot" for="icheckbot">Não</label>
+              <input
+                class="checkbot"
+                type="radio"
+                name="checkbot"
+                id="icheckbot2"
+              />
+              <label class="label_checkbot" for="icheckbot2">Sim</label>
+            </form>
+            <div id="fimform">
+              <p id="obr">(*) Campo obrigatórios</p>
+              <input id="enviar" type="submit" value="Enviar" />
+              <p>
+                Ao clicar em enviar você concorda com todos os termos de uso de
+                dados descritos em <a href="#">política deprivacidade</a>
+              </p>
+            </div>
+          </div>
         </article>
       </section>
     </main>
