--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Página Netuno</title>
     <link rel="stylesheet" href="estilos/gerandodiamantes.css" />
     <link rel="stylesheet" href="estilos/OProjeto.css" />
+    <link rel="stylesheet" href="estilos/OProblema.css" />
   </head>
   <body>
     <header>
@@ -145,7 +146,7 @@
               <input id="enviar" type="submit" value="Enviar" />
               <p>
                 Ao clicar em enviar você concorda com todos os termos de uso de
-                dados descritos em <a href="#">política deprivacidade</a>
+                dados descritos em <a href="#">política de privacidade</a>
               </p>
             </div>
           </div>
@@ -172,7 +173,52 @@
           </p>
         </article>
       </section>
-      <section></section>
+      <section id="oproblema">
+        <article id="texto-oproblema">
+          <h1>O Problema</h1>
+          <h2>
+            Falta de Profissionais de TI no Mercado brasileiro: um problema que
+            demanda atenção urgente.
+          </h2>
+          <div id="bot-oproblema">
+            <p>
+              Estima-se que atualmente tenhamos um déficit de 408 mil postos de
+              trabalho, com perdas se acumulando na casa dos R$167 bilhões, de
+              acordo com a Softex, uma organização social voltada ao fomento da
+              área de TI
+            </p>
+            <p id="pbolder2">
+              Um dos principais fatores dessa falta de profissionais é o êxodo
+              de profissionais para o exterior.
+            </p>
+          </div>
+        </article>
+        <article id="container">
+          <div class="informacao">
+            <h1>Oportinidade</h1>
+            <p>
+              Acreditamos que a combinação de interesse, dedicação e
+              oportunidade pode causar um grande impacto nas pessoas, nas
+              organizações e no mundo.
+            </p>
+          </div>
+          <div class="informacao">
+            <h1>Comunidade</h1>
+            <p>
+              Dentro de um grupo de pessoas mais experientes e acessíveis, a
+              curva de aprendizado ocorre de forma mais rápida, fluída e
+              eficiente.
+            </p>
+          </div>
+          <div class="informacao">
+            <h1>Experiencia Real</h1>
+            <p>
+              Entendemos que somente as experiências reais poderão trazer a
+              bagagem que a teoria não o pode fazer.
+            </p>
+          </div>
+        </article>
+      </section>
     </main>
     <footer></footer>
   </body>
