--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <body>
     <header>
       <div id="logo">
-        <a href=""
-          ><img src="pasta.netuno/Assets_Netuno/assets/logo.png" alt=""
-        /></a>
+        <a href=""><img src="Assets_Netuno/assets/logo.png" alt="" /></a>
       </div>
       <div id="nav">
         <a class="nav" href="">O Projeto</a>
@@ -35,7 +33,7 @@
               <div class="formdiv">
                 <img
                   class="iconform"
-                  src="pasta.netuno/Assets_Netuno/icones/user.png"
+                  src="Assets_Netuno/icones/user.png"
                   alt=""
                 />
                 <input
@@ -50,7 +48,7 @@
               <div class="formdiv">
                 <img
                   class="iconform"
-                  src="pasta.netuno/Assets_Netuno/icones/mail.png"
+                  src="Assets_Netuno/icones/mail.png"
                   alt=""
                 />
                 <input
@@ -65,7 +63,7 @@
               <div class="formdiv">
                 <img
                   class="iconform"
-                  src="pasta.netuno/Assets_Netuno/icones/state.png"
+                  src="Assets_Netuno/icones/state.png"
                   alt=""
                 />
                 <input
@@ -154,7 +152,7 @@
       </section>
       <section id="mae-oprojeto">
         <article id="img-oprojeto">
-          <img src="pasta.netuno/Assets_Netuno/dev.png" alt="" />
+          <img src="Assets_Netuno/dev.png" alt="" />
         </article>
         <article id="texto-oprojeto">
           <h1>O Projeto</h1>
@@ -194,28 +192,37 @@
           </div>
         </article>
         <article id="container">
-          <div class="informacao">
-            <h1>Oportinidade</h1>
-            <p>
-              Acreditamos que a combinação de interesse, dedicação e
-              oportunidade pode causar um grande impacto nas pessoas, nas
-              organizações e no mundo.
-            </p>
+          <div>
+            <h1 class="numero-inv">1</h1>
+            <div class="informacao">
+              <h1>Oportinidade</h1>
+              <p>
+                Acreditamos que a combinação de interesse, dedicação e
+                oportunidade pode causar um grande impacto nas pessoas, nas
+                organizações e no mundo.
+              </p>
+            </div>
           </div>
-          <div class="informacao">
-            <h1>Comunidade</h1>
-            <p>
-              Dentro de um grupo de pessoas mais experientes e acessíveis, a
-              curva de aprendizado ocorre de forma mais rápida, fluída e
-              eficiente.
-            </p>
+          <div>
+            <h1 class="numero-inv">2</h1>
+            <div class="informacao">
+              <h1>Comunidade</h1>
+              <p>
+                Dentro de um grupo de pessoas mais experientes e acessíveis, a
+                curva de aprendizado ocorre de forma mais rápida, fluída e
+                eficiente.
+              </p>
+            </div>
           </div>
-          <div class="informacao">
-            <h1>Experiencia Real</h1>
-            <p>
-              Entendemos que somente as experiências reais poderão trazer a
-              bagagem que a teoria não o pode fazer.
-            </p>
+          <div>
+            <h1 class="numero-inv">3</h1>
+            <div class="informacao">
+              <h1>Experiencia Real</h1>
+              <p>
+                Entendemos que somente as experiências reais poderão trazer a
+                bagagem que a teoria não o pode fazer.
+              </p>
+            </div>
           </div>
         </article>
       </section>
