--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilos/gerandodiamantes.css" />
     <link rel="stylesheet" href="estilos/OProjeto.css" />
     <link rel="stylesheet" href="estilos/OProblema.css" />
+    <link rel="stylesheet" href="estilos/SuaJornada.css" />
   </head>
   <body>
     <header>
@@ -24,12 +25,13 @@
     </header>
     <div id="linha"></div>
     <main>
+      <!--Parte do Formulário-->
       <section id="bannertopo">
         <article id="maeform">
           <div class="form" id="topform">
             <h2>Formulário de Cadastro</h2>
             <p>Preencha seus dados</p>
-            <form action="">
+            <form action="enviar">
               <div class="formdiv">
                 <img
                   class="iconform"
@@ -41,7 +43,8 @@
                   type="text"
                   name="nome"
                   id="inome"
-                  placeholder="Nome completo"
+                  placeholder="Nome completo *"
+                  required
                 />
               </div>
               <br />
@@ -56,7 +59,8 @@
                   type="text"
                   name="email"
                   id="iemail"
-                  placeholder="E-mail"
+                  placeholder="E-mail *"
+                  required
                 />
               </div>
               <br />
@@ -71,59 +75,56 @@
                   type="text"
                   name="estado"
                   id="iestado"
-                  placeholder="Estado"
+                  placeholder="Estado *"
+                  required
                 />
               </div>
               <br />
-            </form>
           </div>
           <div class="form" id="cursuser">
             <h4>Conhecimento de Programação</h4>
-            <form action="">
-              <input class="form2" type="checkbox" name="check1" id="icheck1" />
+              <input class="check" type="checkbox" name="check1" id="icheck1" />
               <label for="ichek1">HTML</label>
-              <input class="form2" type="checkbox" name="check2" id="icheck2" />
+              <input class="check" type="checkbox" name="check2" id="icheck2" />
               <label for="icheck2">CSS</label>
-              <input class="form2" type="checkbox" name="check3" id="icheck3" />
+              <input class="check" type="checkbox" name="check3" id="icheck3" />
               <label for="icheck3">JavaScript</label>
-              <input class="form2" type="checkbox" name="check4" id="icheck4" />
+              <input class="check" type="checkbox" name="check4" id="icheck4" />
               <label for="icheck4">PHP</label> <br />
-              <input class="form2" type="checkbox" name="check5" id="icheck5" />
+              <input class="check" type="checkbox" name="check5" id="icheck5" />
               <label for="icheck5">.NET</label>
-              <input class="form2" type="checkbox" name="check6" id="icheck6" />
+              <input class="check" type="checkbox" name="check6" id="icheck6" />
               <label for="icheck6">Vue.Js</label>
-              <input class="form2" type="checkbox" name="check7" id="icheck7" />
+              <input class="check" type="checkbox" name="check7" id="icheck7" />
               <label for="icheck7">ReactJS</label>
-              <input class="form2" type="checkbox" name="check8" id="icheck8" />
+              <input class="check" type="checkbox" name="check8" id="icheck8" />
               <label for="icheck8">React Native</label> <br />
-              <input class="form2" type="checkbox" name="check9" id="icheck9" />
+              <input class="check" type="checkbox" name="check9" id="icheck9" />
               <label for="icheck9">Node</label>
               <input
-                class="form2"
+                class="check"
                 type="checkbox"
                 name="check10"
                 id="icheck10"
               />
               <label for="icheck10">Python</label>
               <input
-                class="form2"
+                class="check"
                 type="checkbox"
                 name="check11"
                 id="icheck11"
               />
               <label for="icheck11">Flutter</label>
               <input
-                class="form2"
+                class="check"
                 type="checkbox"
                 name="check12"
                 id="icheck12"
               />
               <label for="icheck12">Outras</label>
-            </form>
           </div>
           <div class="form" id="botform">
             <h4>Já trabalhou com desenolvimento?</h4>
-            <form action="">
               <input
                 class="checkbot"
                 type="radio"
@@ -138,7 +139,6 @@
                 id="icheckbot2"
               />
               <label class="label_checkbot" for="icheckbot2">Sim</label>
-            </form>
             <div id="fimform">
               <p id="obr">(*) Campo obrigatórios</p>
               <input id="enviar" type="submit" value="Enviar" />
@@ -148,8 +148,10 @@
               </p>
             </div>
           </div>
+        </form>
         </article>
       </section>
+      <!--Parte O Projeto-->
       <section id="mae-oprojeto">
         <article id="img-oprojeto">
           <img src="Assets_Netuno/dev.png" alt="" />
@@ -171,6 +173,7 @@
           </p>
         </article>
       </section>
+      <!--Parte O Problema-->
       <section id="oproblema">
         <article id="texto-oproblema">
           <h1>O Problema</h1>
@@ -192,38 +195,118 @@
           </div>
         </article>
         <article id="container">
+          <div class="informacao">
+            <div>
+              <h1 class="numero-inv" style="font-size: 90px">1</h1>
+            </div>
+            <h1>Oportinidade</h1>
+            <p>
+              Acreditamos que a combinação de interesse, dedicação e
+              oportunidade pode causar um grande impacto nas pessoas, nas
+              organizações e no mundo.
+            </p>
+          </div>
+          <div class="informacao">
+            <div>
+              <h1 class="numero-inv" style="font-size: 90px">2</h1>
+            </div>
+            <h1>Comunidade</h1>
+            <p>
+              Dentro de um grupo de pessoas mais experientes e acessíveis, a
+              curva de aprendizado ocorre de forma mais rápida, fluída e
+              eficiente.
+            </p>
+          </div>
+          <div class="informacao">
+            <div>
+              <h1 class="numero-inv" style="font-size: 90px">3</h1>
+            </div>
+            <h1>Experiencia Real</h1>
+            <p>
+              Entendemos que somente as experiências reais poderão trazer a
+              bagagem que a teoria não o pode fazer.
+            </p>
+          </div>
+        </article>
+      </section>
+      <!--Parte Sua Jornada-->
+      <section id="suajornada">
+        <article id="frasejornada">
+          <div><img src="Assets_Netuno/Elements/Vector1.png" alt="" /></div>
           <div>
-            <h1 class="numero-inv">1</h1>
-            <div class="informacao">
-              <h1>Oportinidade</h1>
-              <p>
-                Acreditamos que a combinação de interesse, dedicação e
-                oportunidade pode causar um grande impacto nas pessoas, nas
-                organizações e no mundo.
-              </p>
+            <h1>Sua Jornada</h1>
+          </div>
+          <div><img src="Assets_Netuno/Elements/Vector2.png" alt="" /></div>
+        </article>
+        <article class="ajornada">
+          <div class="jornada">
+            <div class="img-jornada">
+              <img src="Assets_Netuno/icones/calendario.png" alt="" />
+            </div>
+            <div class="frase-jornada">
+              <p>Programas de 4 meses de duração, sendo 6 horas/dia.</p>
             </div>
           </div>
-          <div>
-            <h1 class="numero-inv">2</h1>
-            <div class="informacao">
-              <h1>Comunidade</h1>
-              <p>
-                Dentro de um grupo de pessoas mais experientes e acessíveis, a
-                curva de aprendizado ocorre de forma mais rápida, fluída e
-                eficiente.
-              </p>
+          <div class="jornada">
+            <div class="img-jornada">
+              <img src="Assets_Netuno/icones/medalha.png" alt="" />
+            </div>
+            <div class="frase-jornada">
+              <p>Do Zero ao Junior Promissor em 4 meses.</p>
             </div>
           </div>
-          <div>
-            <h1 class="numero-inv">3</h1>
-            <div class="informacao">
-              <h1>Experiencia Real</h1>
-              <p>
-                Entendemos que somente as experiências reais poderão trazer a
-                bagagem que a teoria não o pode fazer.
-              </p>
+          <div class="jornada">
+            <div class="img-jornada">
+              <img src="Assets_Netuno/icones/relogio.png" alt="" />
+            </div>
+            <div class="frase-jornada">
+              <p>640 horas de aplicação prática dos conceitos.</p>
             </div>
           </div>
+        </article>
+        <article class="ajornada">
+          <div class="jornada">
+            <div class="img-jornada">
+              <img src="Assets_Netuno/icones/home.png" alt="" />
+            </div>
+            <div class="frase-jornada">
+              <p>Mentoria individual e coletiva em padrão ágil.</p>
+            </div>
+          </div>
+          <div class="jornada">
+            <div class="img-jornada">
+              <img src="Assets_Netuno/icones/group.png" alt="" />
+            </div>
+            <div class="frase-jornada">
+              <p>100% Home Office com plataformas de cursos online.</p>
+            </div>
+          </div>
+          <div class="jornada">
+            <div class="img-jornada">
+              <img src="Assets_Netuno/icones/target.png" alt="" />
+            </div>
+            <div class="frase-jornada">
+              <p>Variedade de áreas dentro da tecnologia</p>
+            </div>
+          </div>
+        </article>
+        <article id="pt2-ajornada">
+          <a id="botao-cadastrar" href="#">
+            <h2>
+              Quero me cadastrar para o<strong> processo seletivo</strong>
+            </h2>
+            <img src="Assets_Netuno/icones/enter.png" alt="" />
+          </a>
+          <img id="vector" src="Assets_Netuno/Elements/Vector.png" alt="" />
+        </article>
+      </section>
+      <!--Parte Objetivos-->
+      <section>
+        <article>
+          <h1></h1>
+          <div></div>
+          <div></div>
+          <div></div>
         </article>
       </section>
     </main>
