--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página Netuno</title>
-    <link rel="stylesheet" href="estilos/gerandodiamantes.css" />
-    <link rel="stylesheet" href="estilos/OProjeto.css" />
-    <link rel="stylesheet" href="estilos/OProblema.css" />
-    <link rel="stylesheet" href="estilos/SuaJornada.css" />
-    <link rel="stylesheet" href="estilos/Objetivos.css">
-    <link rel="stylesheet" href="estilos/Rodape.css">
+    <link rel="stylesheet" href="estilos/1style.css" />
+    <link rel="stylesheet" href="estilos/2OProjeto.css" />
+    <link rel="stylesheet" href="estilos/3OProblema.css" />
+    <link rel="stylesheet" href="estilos/4SuaJornada.css" />
+    <link rel="stylesheet" href="estilos/5Objetivos.css">
+    <link rel="stylesheet" href="estilos/6Rodape.css">
   </head>
   <body>
     <header>
@@ -18,11 +18,11 @@
         <a href=""><img src="Assets_Netuno/assets/logo.png" alt="" /></a>
       </div>
       <div id="nav">
-        <a class="nav" href="">O Projeto</a>
-        <a class="nav" href="">O Problema</a>
-        <a class="nav" href="">Sua Jornada</a>
-        <a class="nav" href="">Objetivos</a>
-        <a id="bottomblack" href="">Processo Seletivo</a>
+        <div><a class="nav" href="">O Projeto</a></div>
+        <div><a class="nav" href="">O Problema</a></div>
+        <div><a class="nav" href="">Sua Jornada</a></div>
+        <div><a class="nav" href="">Objetivos</a></div>
+        <div id="bottomblack"><p><a href="">Processo Seletivo</a></p></div>
       </div>
     </header>
     <div id="linha"></div>
@@ -155,9 +155,6 @@
       </section>
       <!--Parte O Projeto-->
       <section id="mae-oprojeto">
-        <article id="img-oprojeto">
-          <img src="Assets_Netuno/dev.png" alt="" />
-        </article>
         <article id="texto-oprojeto">
           <h1>O Projeto</h1>
           <p>
@@ -342,18 +339,20 @@
           </a>
         </div>
         <div id="conteudo-rodape">
-          <ul>
-            <li>O Projeto</li>
-            <li>O problema</li>
-            <li>sua Jornada</li>
-            <li>Objetivos</li>
-          </ul>
-        </div>
+          <div id="titulos">
+            <ul>
+              <li>O Projeto</li>
+              <li>O problema</li>
+              <li>sua Jornada</li>
+              <li>Objetivos</li>
+            </ul>
+          </div>
         <div id="contato" class="conteudo-rodape">
           <p><strong>Contato</strong></p>
           <p>11 91234.5678</p>
           <p>contato@netuno.com.br</p>
         </div>
+      </div>
       </article>
     </footer>
   </body>
