--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="estilos/4SuaJornada.css" />
     <link rel="stylesheet" href="estilos/5Objetivos.css">
     <link rel="stylesheet" href="estilos/6Rodape.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
     <header>
@@ -18,11 +19,11 @@
         <a href=""><img src="Assets_Netuno/assets/logo.png" alt="" /></a>
       </div>
       <div id="nav">
-        <div><a class="nav" href="">O Projeto</a></div>
-        <div><a class="nav" href="">O Problema</a></div>
-        <div><a class="nav" href="">Sua Jornada</a></div>
-        <div><a class="nav" href="">Objetivos</a></div>
-        <div id="bottomblack"><p><a href="">Processo Seletivo</a></p></div>
+        <a class="nav" href=""><div>O Projeto</div></a>
+        <a class="nav" href=""><div>O Problema</div></a>
+        <a class="nav" href=""><div>Sua Jornada</div></a>
+        <a class="nav" href=""><div>Objetivos</div></a>
+        <a href="" id="bottomblack"><div><p>Processo Seletivo</p></div></a>
       </div>
     </header>
     <div id="linha"></div>
