--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <a href=""><img src="Assets_Netuno/assets/logo.png" alt="" /></a>
       </div>
       <div id="nav">
-        <a class="nav" href=""><div>O Projeto</div></a>
-        <a class="nav" href=""><div>O Problema</div></a>
-        <a class="nav" href=""><div>Sua Jornada</div></a>
-        <a class="nav" href=""><div>Objetivos</div></a>
+        <a class="nav" id="o-projeto" href="#mae-oprojeto"><div>O Projeto</div></a>
+        <a class="nav" id="o-problema" href="#oproblema"><div>O Problema</div></a>
+        <a class="nav" id="sua-jornada" href="#suajornada"><div>Sua Jornada</div></a>
+        <a class="nav" id="-objetivos" href="#objetivos"><div>Objetivos</div></a>
         <a href="" id="bottomblack"><div><p>Processo Seletivo</p></div></a>
       </div>
     </header>
@@ -342,10 +342,10 @@
         <div id="conteudo-rodape">
           <div id="titulos">
             <ul>
-              <li>O Projeto</li>
-              <li>O problema</li>
-              <li>sua Jornada</li>
-              <li>Objetivos</li>
+              <div class="titulos"><a href="#">O Projeto</a></div>
+              <div class="titulos"><a href="#">O problema</a></div>
+              <div class="titulos"><a href="#">sua Jornada</a></div>
+              <div class="titulos"><a href="#">Objetivos</a></div>
             </ul>
           </div>
         <div id="contato" class="conteudo-rodape">
