--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="nav" id="o-problema" href="#oproblema"><div>O Problema</div></a>
         <a class="nav" id="sua-jornada" href="#suajornada"><div>Sua Jornada</div></a>
         <a class="nav" id="-objetivos" href="#objetivos"><div>Objetivos</div></a>
-        <a href="" id="bottomblack"><div><p>Processo Seletivo</p></div></a>
+        <a href="teste.html" id="bottomblack"><div><p>Processo Seletivo</p></div></a>
       </div>
     </header>
     <div id="linha"></div>
@@ -333,7 +333,7 @@
       </article>
       <article id="rodape">
         <div id="borda-botao">
-          <a href="">
+          <a href="teste.html">
             <div id="botao-rodape">
               <p>Processo Seletivo</p>
             </div>
