--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         </article>
       </section>
       <!--Parte Objetivos-->
-      <section>
+      <section id="fundo-objetivos">
         <article id="objetivos">
           <h1>Objetivos</h1>
           <div id="mae-objetivos">
