--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
       <!--Parte do Formulário-->
       <section id="bannertopo">
-        <article id="maeform">
+        <div id="maeform">
           <div class="form" id="topform">
             <h2>Formulário de Cadastro</h2>
             <p>Preencha seus dados</p>
@@ -152,11 +152,11 @@
             </div>
           </div>
         </form>
-        </article>
+        </div>
       </section>
       <!--Parte O Projeto-->
       <section id="mae-oprojeto">
-        <article id="texto-oprojeto">
+        <div id="texto-oprojeto">
           <h1>O Projeto</h1>
           <p>
             Com o "novo normal"causado pela pandemia dos ultimos anos, mais
@@ -171,11 +171,11 @@
             tecnologia, bem como gerar oportunidades de carreira para novos
             profissionais.
           </p>
-        </article>
+        </div>
       </section>
       <!--Parte O Problema-->
       <section id="oproblema">
-        <article id="texto-oproblema">
+        <div id="texto-oproblema">
           <h1>O Problema</h1>
           <h2>
             Falta de Profissionais de TI no Mercado brasileiro: um problema que
@@ -193,8 +193,8 @@
               de profissionais para o exterior.
             </p>
           </div>
-        </article>
-        <article id="container">
+        </div>
+        <div id="container">
           <div class="informacao">
             <div>
               <h1 class="numero-inv" style="font-size: 90px">1</h1>
@@ -227,18 +227,18 @@
               bagagem que a teoria não o pode fazer.
             </p>
           </div>
-        </article>
+        </div>
       </section>
       <!--Parte Sua Jornada-->
       <section id="suajornada">
-        <article id="frasejornada">
+        <div id="frasejornada">
           <div><img src="Assets_Netuno/Elements/Vector1.png" alt="" /></div>
           <div>
             <h1>Sua Jornada</h1>
           </div>
           <div><img src="Assets_Netuno/Elements/Vector2.png" alt="" /></div>
-        </article>
-        <article class="ajornada">
+        </div>
+        <div class="ajornada">
           <div class="jornada">
             <div class="img-jornada">
               <img src="Assets_Netuno/icones/calendario.png" alt="" />
@@ -263,8 +263,8 @@
               <p>640 horas de aplicação prática dos conceitos.</p>
             </div>
           </div>
-        </article>
-        <article class="ajornada">
+        </div>
+        <div class="ajornada">
           <div class="jornada">
             <div class="img-jornada">
               <img src="Assets_Netuno/icones/home.png" alt="" />
@@ -289,8 +289,8 @@
               <p>Variedade de áreas dentro da tecnologia</p>
             </div>
           </div>
-        </article>
-        <article id="pt2-ajornada">
+        </div>
+        <div id="pt2-ajornada">
           <a id="botao-cadastrar" href="#">
             <h2>
               Quero me cadastrar para o<strong> processo seletivo</strong>
@@ -298,11 +298,11 @@
             <img src="Assets_Netuno/icones/enter.png" alt="" />
           </a>
           <img id="vector" src="Assets_Netuno/Elements/Vector.png" alt="" />
-        </article>
+        </div>
       </section>
       <!--Parte Objetivos-->
       <section id="fundo-objetivos">
-        <article id="objetivos">
+        <div id="objetivos">
           <h1>Objetivos</h1>
           <div id="mae-objetivos">
             <div class="os-objetivos">
@@ -318,11 +318,11 @@
               <p>Criar oportunidades brilhantes para profissionais que se destacam junto a parceiros estratégicos de negócio.</p>
             </div>
           </div>
-        </article>
+        </div>
       </section>
     </main>
     <footer>
-      <article id="imagem-redes-sociais">
+      <div id="imagem-redes-sociais">
         <img id="imagem-rodape" src="Assets_Netuno/assets/logo+slogan.png" alt="">
         <div id="icon-social">
           <img class="social" src="Assets_Netuno/icones/fb.png" alt="">
@@ -330,8 +330,8 @@
           <img class="social" src="Assets_Netuno/icones/in.png" alt="">
           <p>Netuno© 2022 - Todos os direitos reservados</p>
         </div>
-      </article>
-      <article id="rodape">
+      </div>
+      <div id="rodape">
         <div id="borda-botao">
           <a href="teste.html">
             <div id="botao-rodape">
@@ -354,7 +354,7 @@
           <p>contato@netuno.com.br</p>
         </div>
       </div>
-      </article>
+      </div>
     </footer>
   </body>
 </html>
