--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <div id="logo">
         <a href=""><img src="Assets_Netuno/assets/logo.png" alt="" /></a>
       </div>
-      <div id="nav">
+      <nav id="nav">
         <a class="nav" id="o-projeto" href="#mae-oprojeto"><div>O Projeto</div></a>
         <a class="nav" id="o-problema" href="#oproblema"><div>O Problema</div></a>
         <a class="nav" id="sua-jornada" href="#suajornada"><div>Sua Jornada</div></a>
         <a class="nav" id="-objetivos" href="#objetivos"><div>Objetivos</div></a>
         <a href="teste.html" id="bottomblack"><div><p>Processo Seletivo</p></div></a>
-      </div>
+      </nav>
     </header>
     <div id="linha"></div>
     <main>
