--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="nav" id="o-problema" href="#oproblema"><div>O Problema</div></a>
         <a class="nav" id="sua-jornada" href="#suajornada"><div>Sua Jornada</div></a>
         <a class="nav" id="-objetivos" href="#objetivos"><div>Objetivos</div></a>
-        <a href="teste.html" id="bottomblack"><div><p>Processo Seletivo</p></div></a>
+        <a href="#maeform" id="bottomblack"><div><p>Processo Seletivo</p></div></a>
       </nav>
     </header>
     <div id="linha"></div>
@@ -291,7 +291,7 @@
           </div>
         </div>
         <div id="pt2-ajornada">
-          <a id="botao-cadastrar" href="#">
+          <a id="botao-cadastrar" href="#maeform">
             <h2>
               Quero me cadastrar para o<strong> processo seletivo</strong>
             </h2>
@@ -333,7 +333,7 @@
       </div>
       <div id="rodape">
         <div id="borda-botao">
-          <a href="teste.html">
+          <a href="#maeform">
             <div id="botao-rodape">
               <p>Processo Seletivo</p>
             </div>
