--- a/index.html
+++ b/index.html
@@ -194,38 +194,41 @@
             </p>
           </div>
         </div>
-        <div id="container">
-          <div class="informacao">
-            <div>
-              <h1 class="numero-inv" style="font-size: 90px">1</h1>
+        <div id="mae-container">
+          <div id="container-img"></div>
+          <div id="container">
+            <div class="informacao">
+              <div>
+                <h1 class="numero-inv" style="font-size: 90px">1</h1>
+              </div>
+              <h1>Oportinidade</h1>
+              <p>
+                Acreditamos que a combinação de interesse, dedicação e
+                oportunidade pode causar um grande impacto nas pessoas, nas
+                organizações e no mundo.
+              </p>
             </div>
-            <h1>Oportinidade</h1>
-            <p>
-              Acreditamos que a combinação de interesse, dedicação e
-              oportunidade pode causar um grande impacto nas pessoas, nas
-              organizações e no mundo.
-            </p>
-          </div>
-          <div class="informacao">
-            <div>
-              <h1 class="numero-inv" style="font-size: 90px">2</h1>
+            <div class="informacao">
+              <div>
+                <h1 class="numero-inv" style="font-size: 90px">2</h1>
+              </div>
+              <h1>Comunidade</h1>
+              <p>
+                Dentro de um grupo de pessoas mais experientes e acessíveis, a
+                curva de aprendizado ocorre de forma mais rápida, fluída e
+                eficiente.
+              </p>
             </div>
-            <h1>Comunidade</h1>
-            <p>
-              Dentro de um grupo de pessoas mais experientes e acessíveis, a
-              curva de aprendizado ocorre de forma mais rápida, fluída e
-              eficiente.
-            </p>
-          </div>
-          <div class="informacao">
-            <div>
-              <h1 class="numero-inv" style="font-size: 90px">3</h1>
+            <div class="informacao">
+              <div>
+                <h1 class="numero-inv" style="font-size: 90px">3</h1>
+              </div>
+              <h1>Experiencia Real</h1>
+              <p>
+                Entendemos que somente as experiências reais poderão trazer a
+                bagagem que a teoria não o pode fazer.
+              </p>
             </div>
-            <h1>Experiencia Real</h1>
-            <p>
-              Entendemos que somente as experiências reais poderão trazer a
-              bagagem que a teoria não o pode fazer.
-            </p>
           </div>
         </div>
       </section>
@@ -342,10 +345,10 @@
         <div id="conteudo-rodape">
           <div id="titulos">
             <ul>
-              <div class="titulos"><a href="#">O Projeto</a></div>
-              <div class="titulos"><a href="#">O problema</a></div>
-              <div class="titulos"><a href="#">sua Jornada</a></div>
-              <div class="titulos"><a href="#">Objetivos</a></div>
+              <div class="titulos"><a href="#texto-oprojeto">O Projeto</a></div>
+              <div class="titulos"><a href="#texto-oproblema">O problema</a></div>
+              <div class="titulos"><a href="#frasejornada">sua Jornada</a></div>
+              <div class="titulos"><a href="#fundo-objetivos">Objetivos</a></div>
             </ul>
           </div>
         <div id="contato" class="conteudo-rodape">
