--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
       <!--Parte Sua Jornada-->
       <section id="suajornada">
         <div id="frasejornada">
-          <div><img src="Assets_Netuno/Elements/Vector1.png" alt="" /></div>
+          <div id="vector1" class="vector"></div>
           <div>
             <h1>Sua Jornada</h1>
           </div>
-          <div><img src="Assets_Netuno/Elements/Vector2.png" alt="" /></div>
+          <div id="vector2" class="vector"></div>
         </div>
         <div class="ajornada">
           <div class="jornada">
