--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
             profissionais.
           </p>
         </div>
+        <div id="imagem-oprojeto"><img src="Assets_Netuno/dev.png" alt=""></div>
       </section>
       <!--Parte O Problema-->
       <section id="oproblema">
