--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           </div>
         </div>
         <div id="mae-container">
-          <div id="container-img"></div>
+          <div id="container-img"><img src="Assets_Netuno/Container2.png" alt=""></div>
           <div id="container">
             <div class="informacao">
               <div>
