--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
         <div id="texto-oprojeto">
           <h1>O Projeto</h1>
           <p>
-            Com o "novo normal"causado pela pandemia dos ultimos anos, mais
-            empresas nomundo todo tém aberto oportunidades no modelohome office.
+            Com o "novo normal" causado pela pandemia dos ultimos anos, mais
+            empresas no mundo todo têm aberto oportunidades no modelo home office.
             <br />
-            Alinhadoa depreciação da moeda local, temos um alto índice de
+            Alinhado a depreciação da moeda local, temos um alto índice de
             profissionais migrando para trabalhos em outros países.
           </p>
           <p id="pbolder">
-            Oprojeto Netuno, idealizado pela fasters, tem por objetivo reduzir
+            O projeto Netuno, idealizado pela Fasters, tem por objetivo reduzir
             os estresses causados por recrutamennto e turn over na área de
             tecnologia, bem como gerar oportunidades de carreira para novos
             profissionais.
