--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <section id="suajornada">
         <div id="frasejornada">
           <div id="vector1" class="vector"></div>
-          <div>
+          <div id="div-frase">
             <h1>Sua Jornada</h1>
           </div>
           <div id="vector2" class="vector"></div>
